Bug in makeGrid
Commit before bugfixing. Very large number of gridpoints from makeGrid

--- a/functions/CCode/makefile
+++ b/functions/CCode/makefile
@@ -58,5 +58,8 @@ calcGradFastFloat: calcGradFastFloatC.o
 calcGradFull: calcGradFullC.o
 	$(MEXFILE) CFLAGS="\$$CFLAGS $(FLAGSMATLAB)" LDFLAGS="\$$LDFLAGS -fopenmp" $@.c $<
 
+newtonInit: makeGridC.o calcGradFullAVXC.o calcGradFloatC.o
+	$(MEXFILE) CFLAGS="\$$CFLAGS $(FLAGSMATLAB)" LDFLAGS="\$$LDFLAGS -fopenmp" newtonBFGSLInitC.c $^
+
 %.o: %.c
 	gcc -c $(FLAGSGCC) -I$(MATLABINCLUDE) $<
