Modified *and* tested newtonBFGSLInit.m
Now uses C-function to calculate newtonStep and small changes in the
code. Slight change to calling interface.

Next step is to debug the C-code for this function.

--- a/functions/CCode/newton/makefile
+++ b/functions/CCode/newton/makefile
@@ -14,7 +14,7 @@ clean:
 
 all: newtonInit
 
-newtonInit: makeGridC.o calcGradFullAVXC.o calcGradFloatC.o
+newtonInit: makeGridC.o calcGradFullAVXC.o calcGradFloatC.o CNS.o
 	gcc newtonTest.c -o runInit -I$(MATLABINCLUDE) -L$(MATLABLIB) $(FLAGSGCC) -Wl,-rpath,$(MATLABLIB) -DFILELOC='"$(FILELOC)"' $^ -lm -fopenmp -lmx -lmat -lmex 
 
 %.o: %.c
