Converted all inputvars of newtonBFGLSC to double
Since R has no float, convert all to double.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,5 @@ internStuff
 journalScripts
 functions/CCodeOld
 functions/CCode/CUDA
-functions/CCode/newton/runInit
-functions/CCode/newton/runFull
+functions/CCode/newton/run*
 
