--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ functions/CCodeOld
 functions/CCode/CUDA
 functions/CCode/newton/run*
 functions/CCode/newton/calcGradC.c
+functions/CCode/newton/preCondGradAVXC.c
