--- a/functions/CCode/newton/makefile
+++ b/functions/CCode/newton/makefile
@@ -14,10 +14,10 @@ clean:
 
 all: newton debug
 
-newton: makeGridC.o CNS.o calcGradAVX.o calcGradC.o preCondGradAVXC.o
+newton: makeGridC.o CNS.o calcGradAVX.o calcGradC.o preCondGradAVXC.o calcGradFastFloatC.o
 	gcc newtonTest.c -o runFull -I$(MATLABINCLUDE) -L$(MATLABLIB) $(FLAGSGCC) -Wl,-rpath,$(MATLABLIB) -DFILELOC='"$(FILELOC)"' $^ -lm -fopenmp -lmx -lmat -lmex 
 
-debug: makeGridC.o CNS.o calcGradAVX.o calcGradC.o preCondGradAVXC.o
+debug: makeGridC.o CNS.o calcGradAVX.o calcGradC.o preCondGradAVXC.o calcGradFastFloatC.o
 	gcc -g newtonTest.c -o runDebug -I$(MATLABINCLUDE) -L$(MATLABLIB) $(FLAGSGCC) -O0 -Wl,-rpath,$(MATLABLIB) -DFILELOC='"$(FILELOC)"' $^ -lm -fopenmp -lmx -lmat -lmex 
 
 newtonInit: makeGridC.o calcGradFullAVXC.o calcGradFloatC.o CNS.o
