Fixed memory leak in makeGrid
Another memory leak remaining to be tracked down. Causing crashes when
running the optimization. Seems to be connected to either the switch to
double or the one to the fast approximation mode.

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ journalScripts
 functions/CCodeOld
 functions/CCode/CUDA
 functions/CCode/newton/run*
-functions/CCode/newton/calcGradC.c
-functions/CCode/newton/preCondGradAVXC.c
+functions/CCode/newton/*.c
+functions/CCode/newton/valgrind.opt
 
 [alias]
 ls = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate
