Fixed memory leaks in bfgsFullC.c
Now code seems to be stable. But still have to check for full test suite.

--- a/functions/CCode/newton/makefile
+++ b/functions/CCode/newton/makefile
@@ -1,10 +1,9 @@
-MATLABDIR = /usr/local/MATLAB/R2016a/
-FILELOC = /home/fabian/Documents/Arbeit/Code/MyCode/LogConcave/code/newtonInit.mat
-#MATLABDIR = /server/opt/archive/matlab2013
-#FILELOC = /export/home/frathke/Documents/Code/MyCode/LogConcave/code/cudaWorkspace.mat
+#MATLABDIR = /usr/local/MATLAB/R2016a/
+#FILELOC = /home/fabian/Documents/Arbeit/Code/MyCode/LogConcave/code/newtonInit.mat
+MATLABDIR = /opt/MATLAB/R2016b/
+FILELOC = /export/home/frathke/Documents/Code/MyCode/LogConcave/code/newtonInit.mat
 MATLABINCLUDE = $(MATLABDIR)/extern/include/
 MATLABLIB = $(MATLABDIR)/bin/glnxa64/
-NUMBEROFCORES = 4
 
 #FLAGSGCC = -O3 -std=c++11 -fPIC -pedantic-errors -Wall -fopenmp -lm -D NUMCORES=$(NUMBEROFCORES)
 FLAGSGCC = -O3 -funroll-loops -ftree-vectorize -march=native -std=c99 -fPIC -pedantic-errors -fopenmp -Wall -Wextra -D NUMCORES=$(NUMBEROFCORES)
@@ -24,5 +23,5 @@ newtonInit: makeGridC.o calcGradFullAVXC.o calcGradFloatC.o CNS.o
 	gcc -g newtonTestInit.c -o runInit -I$(MATLABINCLUDE) -L$(MATLABLIB) $(FLAGSGCC) -Wl,-rpath,$(MATLABLIB) -DFILELOC='"$(FILELOC)"' $^ -lm -fopenmp -lmx -lmat -lmex 
 
 %.o: %.c
-	gcc -g -c $(FLAGSGCC) -O0 -I$(MATLABINCLUDE) $<	
+	gcc -c $(FLAGSGCC) -I$(MATLABINCLUDE) $<	
 
