--- a/functions/CCode/newton/makefile
+++ b/functions/CCode/newton/makefile
@@ -1,7 +1,7 @@
-#MATLABDIR = /usr/local/MATLAB/R2016a/
-#FILELOC = /home/fabian/Documents/Arbeit/Code/MyCode/LogConcave/code/newtonInit.mat
-MATLABDIR = /opt/MATLAB/R2016b/
-FILELOC = /export/home/frathke/Documents/Code/MyCode/LogConcave/code/newtonInit.mat
+MATLABDIR = /usr/local/MATLAB/R2016a/
+FILELOC = /home/fabian/Documents/Arbeit/Code/MyCode/LogConcave/code/newtonInit.mat
+#MATLABDIR = /opt/MATLAB/R2016b/
+#FILELOC = /export/home/frathke/Documents/Code/MyCode/LogConcave/code/newtonInit.mat
 MATLABINCLUDE = $(MATLABDIR)/extern/include/
 MATLABLIB = $(MATLABDIR)/bin/glnxa64/
 
@@ -9,7 +9,7 @@ MATLABLIB = $(MATLABDIR)/bin/glnxa64/
 FLAGSGCC = -O3 -funroll-loops -ftree-vectorize -march=native -std=c99 -fPIC -pedantic-errors -fopenmp -Wall -Wextra -D NUMCORES=$(NUMBEROFCORES)
 
 clean:
-	rm *.o *.mexa64
+	rm *.o 
 
 all: newton debug
 
@@ -23,5 +23,5 @@ newtonInit: makeGridC.o calcGradFullAVXC.o calcGradFloatC.o CNS.o
 	gcc -g newtonTestInit.c -o runInit -I$(MATLABINCLUDE) -L$(MATLABLIB) $(FLAGSGCC) -Wl,-rpath,$(MATLABLIB) -DFILELOC='"$(FILELOC)"' $^ -lm -fopenmp -lmx -lmat -lmex 
 
 %.o: %.c
-	gcc -c $(FLAGSGCC) -I$(MATLABINCLUDE) $<	
+	gcc -g -c $(FLAGSGCC) -O0 -I$(MATLABINCLUDE) $<	
 
