Bugfix in calcGradC
Deactivated XToBox mechanism from calcGradC.c.

--- a/functions/CCode/makefile
+++ b/functions/CCode/makefile
@@ -22,7 +22,7 @@ bfgsFull: makeGridC.o CNS.o calcGradAVX.o calcGradC.o preCondGradAVXC.o calcGrad
 	$(MEXFILE) CFLAGS="\$$CFLAGS $(FLAGSMATLAB)" LDFLAGS="\$$LDFLAGS -fopenmp" $@C.c $^
 
 calcExactIntegral: calcExactIntegralC.o recalcParamsC.o
-	$(MEXFILE) CFLAGS="\$$CFLAGS $(FLAGSMATLAB)" LDFLAGS="\$$LDFLAGS -fopenmp" -lmwlapack -lmwblas calcExactIntegral.c calcExactIntegralC.o recalcParamsC.o
+	$(MEXFILE) CFLAGS="\$$CFLAGS $(FLAGSMATLAB)" LDFLAGS="\$$LDFLAGS -fopenmp" -lmwlapack -lmwblas calcExactIntegral.c $^
 
 evalObjective: evalObjectiveC.o
 	$(MEXFILE) CFLAGS="\$$CFLAGS $(FLAGSMATLAB)" LDFLAGS="\$$LDFLAGS -fopenmp" $@.c $<
