Added sorting of X according to grid boxes
Reactivated sorting of X for dims = {1,2,3} according to which boxes the
X lie in. This speeds up computation for large datasets.

--- a/functions/CCode/makefile
+++ b/functions/CCode/makefile
@@ -4,7 +4,7 @@ MEXFILE = $(MATLABDIR)/bin/mex
 MATLABINCLUDE = $(MATLABDIR)/extern/include/
 
 #FLAGSGCC = -03 -std=c89 -fPIC -pedantic-errors -Wall -fopenmp -lm
-FLAGSGCC = -Ofast -funroll-loops -ftree-vectorize -march=native -std=c99 -fPIC -pedantic-errors -Wall -fopenmp -lm
+FLAGSGCC = -O3 -funroll-loops -ftree-vectorize -march=native -std=c99 -fPIC -pedantic-errors -Wall -fopenmp -lm
 FLAGSMATLAB = -fopenmp -std=c99 -pedantic-errors -Wall -march=native -Ofast
 
 clean:
