Finished update of makeGrid
Implemented flexible grid size. Allows the final box in each dimension
to only have a subset of M points determined by K. This enables more
control over the final number of gridpoitns especially for d > 4.

--- a/functions/CCode/makefile
+++ b/functions/CCode/makefile
@@ -10,7 +10,7 @@ FLAGSMATLAB = -fopenmp -std=c99 -pedantic-errors -Wall -march=native -Ofast
 clean:
 	rm *.o *.mexa64
 
-all: kernelDens calcExactIntegral evalObjective bfgsFull bfgsInit
+all: kernelDens calcExactIntegral evalObjective bfgsFull bfgsInit makeGrid
 
 kernelDens:
 	$(MEXFILE) CFLAGS="\$$CFLAGS $(FLAGSMATLAB)" LDFLAGS="\$$LDFLAGS -fopenmp" kernelDensC.c
